--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Not upload data files but the doler
+/Data/*
+!/Data/.gitkeep
