CC calculus for 5 mins all data and refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -85,4 +85,9 @@ fabric.properties
 !/Data/Original_Data/integrity_check.py
 
 !/Data/Clean_Data/
-/Data/Clean_Data/*
+/Data/Clean_Data/*.csv
+/Data/Clean_Data/*.pickle
+
+!/Data/cc_Data/
+/Data/cc_Data/*.csv
+/Data/cc_Data/*.pickle
