--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ fabric.properties
 # Classifiers
 /Experiments/Classifiers/*.joblib
 /Experiments/Classifiers/.gitkeep
+
+# Libreria
+/scikit-fda/
