--- a/.gitignore
+++ b/.gitignore
@@ -107,19 +107,25 @@ fabric.properties
 /Preprocessing/FPCA/FPCA_FILES/*
 /Preprocessing/FPCA/FPCA_FILES/OLD/*
 /Preprocessing/FPCA/no_outliers/FPCA_FILES/*
+/Preprocessing/FPCA/no_dataset_outliers/FPCA_FILES/*
 /Preprocessing/mRMR/mRMR_FILES/*
 /Preprocessing/mRMR/mRMR_FILES/OLD/*
 /Preprocessing/mRMR/no_outliers/mRMR_FILES/*
+/Preprocessing/mRMR/no_dataset_outliers/mRMR_FILES/*
 /Preprocessing/PLS/PLS_FILES/*
 /Preprocessing/PLS/PLS_FILES/OLD/*
 /Preprocessing/PLS/no_outliers/PLS_FILES/*
+/Preprocessing/PLS/no_dataset_outliers/PLS_FILES/*
 
 !/Preprocessing/FPCA/FPCA_FILES/.gitkeep
 !/Preprocessing/FPCA/no_outliers/FPCA_FILES/.gitkeep
+!/Preprocessing/FPCA/no_dataset_outliers/FPCA_FILES/.gitkeep
 !/Preprocessing/mRMR/mRMR_FILES/.gitkeep
 !/Preprocessing/mRMR/no_outliers/mRMR_FILES/.gitkeep
+!/Preprocessing/mRMR/no_dataset_outliers/mRMR_FILES/.gitkeep
 !/Preprocessing/PLS/PLS_FILES/.gitkeep
 !/Preprocessing/PLS/no_outliers/PLS_FILES/.gitkeep
+!/Preprocessing/PLS/no_dataset_outliers/PLS_FILES/.gitkeep
 
 # Plot images
 /Transformations/**/*.png
